# Damascus

./: README.md  ad-hoc_configuration.md  ntw_sharing.sh
ad_hoc_network_configuration_files/: README.md  dhcpd.conf  rc.local
cryptography/: CMakeLists.txt  README.md
cryptography/Blowfish/: CMakeLists.txt  README.md
cryptography/Blowfish/genfiles/: cipher.txt  console_output.md  psswd.txt
cryptography/Blowfish/include/: Blowfish.h
cryptography/Blowfish/src/: Blowfish.cpp  decryption.cpp  encryption.cpp  test.cpp
cryptography/Keys/: Current_DS_key.txt  RSA_PrivateKey.txt  RSA_PublicKey.txt  Signature_Message_2.txt  Signature_Message_3.txt  Signature_Message_4.txt  Signature_PrivateKey_1.txt  Signature_PrivateKey_2.txt  Signature_PrivateKey_3.txt  Signature_PrivateKey_4.txt  Signature_PublicKey_2.txt  Signature_PublicKey_4.txt
cryptography/RSA/: CMakeLists.txt  README.md  rsa.cpp
cryptography/RSA/genfiles/: BF_Key_ciphered.txt  PrivateKey.txt  PublicKey.txt  temp.txt  test_output.md
cryptography/RSA/include/: RSA.h
cryptography/RSA/src/: RSA.cpp  decrypt.cpp  encrypt.cpp  generate_key.cpp  getCA.cpp  signCA.cpp  test.cpp
cryptography/Security/include/: Security.h
cryptography/Security/src/: Security.cpp
cryptography/genfiles/: BF_Key_ciphered.txt  SignedCA.txt  cipher.txt  temp.txt  tempDS.txt
cryptography/sockets/: AuthorizationStatus.txt  BF_KEY_ciphered.txt  BF_encrypted_confirmation  BF_encrypted_received.txt  BF_key_received.txt  Confirmation_encrypted.txt  DigitalSignatureAuthentication.txt  Shared_Public_key.txt  Signature_encrypted.txt  SignedCA.txt  received_message.txt
cryptography/src/: client.cpp  server.cpp  verification.cpp
cryptography/tests/: SecuritySystem_test_sockets.md  SecuritySystem_test_sockets.txt
